--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/theme": "^2.2.11",
     "framer-motion": "^11.5.6",
     "marked": "^14.1.2",
+    "meilisearch": "^0.44.1",
     "next": "^14.2.13",
     "qs": "^6.13.0",
     "react": "^18",
