--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
+NEXT_PUBLIC_API_URL_Contact=http://localhost:3000/api/contact
 NEXT_PUBLIC_STRAPI_URL=https://strapicms-production-f0e2.up.railway.app
+NEXT_PUBLIC_DB_URL='mongodb://mahnoor:mahnoor@ac-wxsks8q-shard-00-00.7rofu49.mongodb.net:27017,ac-wxsks8q-shard-00-01.7rofu49.mongodb.net:27017,ac-wxsks8q-shard-00-02.7rofu49.mongodb.net:27017/?ssl=true&replicaSet=atlas-uvtjal-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0/userData'
