--- a/.env
+++ b/.env
@@ -1,3 +1,12 @@
 NEXT_PUBLIC_API_URL_Contact=https://strapicms-production-f0e2.up.railway.app/api/contact
 NEXT_PUBLIC_STRAPI_URL=https://strapicms-production-f0e2.up.railway.app
 NEXT_PUBLIC_DB_URL='mongodb://mahnoor:mahnoor@ac-wxsks8q-shard-00-00.7rofu49.mongodb.net:27017,ac-wxsks8q-shard-00-01.7rofu49.mongodb.net:27017,ac-wxsks8q-shard-00-02.7rofu49.mongodb.net:27017/?ssl=true&replicaSet=atlas-uvtjal-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0/userData'
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+DATABASE_URL="file:./dev.db"
