--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@nextui-org/react": "^2.4.8",
     "@nextui-org/system": "^2.2.6",
     "@nextui-org/theme": "^2.2.11",
+    "@prisma/client": "^5.21.1",
+    "better-sqlite3": "^11.5.0",
     "framer-motion": "^11.5.6",
     "marked": "^14.1.2",
     "meilisearch": "^0.44.1",
@@ -32,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.12",
     "postcss": "^8",
+    "prisma": "^5.21.1",
     "tailwindcss": "^3.4.1"
   }
 }
