--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ NEXT_PUBLIC_DB_URL='mongodb://mahnoor:mahnoor@ac-wxsks8q-shard-00-00.7rofu49.mon
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL='mongodb://mahnoor:mahnoor@ac-wxsks8q-shard-00-00.7rofu49.mongodb.net:27017,ac-wxsks8q-shard-00-01.7rofu49.mongodb.net:27017,ac-wxsks8q-shard-00-02.7rofu49.mongodb.net:27017/?ssl=true&replicaSet=atlas-uvtjal-shard-0&authSource=admin&retryWrites=true&w=majority&appName=Cluster0/userData'
