--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ NEXT_PUBLIC_DB_URL='mongodb://mahnoor:mahnoor@ac-wxsks8q-shard-00-00.7rofu49.mon
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="file:./dev.db"
+DATABASE_URL="postgres://postgres.xtgfsfkkgpgpsjgqygnb:CQ1dhlzsTKRcgAAT@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x?connect_timeout=30"
