--- a/.env
+++ b/.env
@@ -9,4 +9,4 @@ NEXT_PUBLIC_DB_URL='mongodb://mahnoor:mahnoor@ac-wxsks8q-shard-00-00.7rofu49.mon
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-POSTGRES_URL="postgres://postgres.xtgfsfkkgpgpsjgqygnb:CQ1dhlzsTKRcgAAT@aws-0-us-east-1.pooler.supabase.com:6543/postgres?sslmode=require&supa=base-pooler.x"
+DATABASE_URL="postgresql://blog_comments_user:nXcAc3RLJ2zX2ICopxXJtRa1RBzYbsaa@dpg-csoghpogph6c73br6t70-a.oregon-postgres.render.com/blog_comments"
