--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@nextui-org/theme": "^2.2.11",
     "@prisma/client": "^5.22.0",
     "better-sqlite3": "^11.5.0",
+    "firebase": "^11.0.1",
     "framer-motion": "^11.5.6",
     "marked": "^14.1.2",
     "meilisearch": "^0.44.1",
