--- a/.env
+++ b/.env
@@ -10,3 +10,12 @@ NEXT_PUBLIC_DB_URL='mongodb://mahnoor:mahnoor@ac-wxsks8q-shard-00-00.7rofu49.mon
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://blog_comments_user:nXcAc3RLJ2zX2ICopxXJtRa1RBzYbsaa@dpg-csoghpogph6c73br6t70-a.oregon-postgres.render.com/blog_comments"
+
+
+  apiKey= "AIzaSyDt-0gijiFRJl1mtsfQ_LeXAjOzsf7bF1o",
+  authDomain="blog-website-66e03.firebaseapp.com",
+  projectId= "blog-website-66e03",
+  storageBucket= "blog-website-66e03.appspot.com",
+  messagingSenderId= "734745233252",
+  appId= "1:734745233252:web:3efe7e371dd5d86c11dc71",
+  measurementId= "G-RY0FRNDXG5"
